# rxing

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/one-d-proc-derive/: Cargo.toml
crates/one-d-proc-derive/src/: lib.rs
src/: binary_bitmap.rs  buffered_image_luminance_source.rs  decode_hints.rs  encode_hints.rs  filtered_image_reader.rs  helpers.rs  lib.rs  luma_luma_source.rs  luminance_source.rs  multi_format_reader.rs  multi_format_writer.rs  multi_use_multi_format_reader.rs  planar_yuv_luminance_source.rs  rgb_luminance_source.rs  rgb_luminance_source_test_case.rs  rxing_result_metadata.rs  svg_luminance_source.rs
src/aztec/: mod.rs
src/client/result/: ParsedReaderResultTestCase.rs  ProductResultParser.rs  ResultParser.rs  mod.rs
src/common/: adaptive_threshold_binarizer.rs  bit_matrix.rs  bitmatrix_sources.rs  character_set.rs  hybrid_binarizer.rs  mod.rs  test_utils.rs
src/common/cpp_essentials/: concentric_finder.rs  dm_regression_line.rs  edge_tracer.rs  fast_edge_to_edge_counter.rs  mod.rs  pattern.rs  regression_line.rs  util.rs
src/common/cpp_essentials/base_extentions/: mod.rs  qr_ec_level.rs  qr_formatinformation.rs  qrcode_version.rs
src/datamatrix/: data_matrix_writer.rs  mod.rs
src/datamatrix/decoder/: decoded_bit_stream_parser.rs
src/datamatrix/detector/zxing_cpp_detector/: cpp_new_detector.rs
src/maxicode/: mod.rs
src/multi/: mod.rs
src/multi/qrcode/: qr_code_multi_reader.rs
src/multi/qrcode/detector/: multi_finder_pattern_finder.rs
src/oned/: coda_bar_reader.rs  coda_bar_writer.rs  code_128_reader.rs  code_128_writer.rs  code_39_reader.rs  code_39_writer.rs  code_93_reader.rs  code_93_writer.rs  ean_13_reader.rs  ean_13_writer.rs  ean_8_reader.rs  ean_8_writer.rs  itf_writer.rs  mod.rs  oned_constants.rs  telepen_writer.rs  upc_e_reader.rs  upc_e_writer.rs  upc_ean_extension_2_support.rs  upc_ean_extension_5_support.rs  upc_ean_reader.rs  upcean_common.rs
src/oned/cpp/: dxfilm_edge_reader.rs  one_d_reader.rs  row_reader.rs
src/pdf417/: mod.rs  pdf_417_reader.rs
src/pdf417/decoder/: mod.rs
src/qrcode/: QRCodeWriterTestCase.rs  mod.rs  qr_code_writer.rs
src/qrcode/common/: ErrorCorrectionLevelTestCase.rs  FormatInformationTestCase.rs  ModeTestCase.rs  VersionTestCase.rs  mod.rs
src/qrcode/cpp_port/: bitmatrix_parser.rs  decoder.rs  detector.rs  mod.rs  qr_cpp_reader.rs  qr_type.rs
src/qrcode/cpp_port/test/: QRDecodedBitStreamParserTest.rs  QRErrorCorrectionLevelTest.rs  QRFormatInformationTest.rs  QRModeTest.rs  QRVersionTest.rs
src/qrcode/decoder/: DecodedBitStreamParserTestCase.rs  bit_matrix_parser.rs  data_block.rs  decoded_bit_stream_parser.rs  mod.rs
src/qrcode/detector/: detector_test.rs  finder_pattern_finder.rs  mod.rs  qrcode_detector.rs
src/qrcode/encoder/: EncoderTestCase.rs  MaskUtilTestCase.rs  QRCodeTestCase.rs  mask_util.rs  matrix_util.rs  matrix_util_testcase.rs  minimal_encoder.rs  mod.rs  qr_code.rs  qrcode_encoder.rs
tests/: aztec_blackbox_tests.rs  codabar_blackbox_1_test_case.rs  code_128_blackbox.rs  code_39_blackbox_reader.rs  code_93_blackbox_1_testcase.rs  cpp_qr_code_blackbox_tests.rs  cropped_transposed_luma.rs  datamatrix_black_box_test_cases.rs  dx_film_edge.rs  ean_13_blackbox_tests.rs  ean_8_black_box_1_testcase.rs  github_issues.rs  inverted_data_matrix_black_box_testcase.rs  itf_blackbox.rs  maxicode_blackbox_tests.rs  pdf_417_black_box_4_testcase.rs  pdf_417_blackbox_tests.rs  qr_code_blackbox_tests.rs  rss_14_blackbox.rs  rss_expanded_blackbox.rs  telepen_blackbox_1_test_case.rs  upc_a_blackbox_tests.rs  upc_e_blackbox_tests.rs  upc_ean_extension_black_box_1_testcase.rs
tests/common/: abstract_black_box_test_case.rs  mod.rs  multiimage_span.rs
